updated about page and switched images

--- a/index.html
+++ b/index.html
@@ -45,25 +45,19 @@
             <div class="card col-12">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-sm-12 col-md-4 col-lg-3">
+                            <img src="images/about.jpg" alt="about" class="float-left img-thumbnail img-fluid mb-3"></div>
+                        <div class="col-sm-12 col-md-8 col-lg-9">
                             <p>Hello, welcome to my page! My name is Cindy.</p>
                             <p>I was born and raised in the Bay Area, specifically Oakland&mdash;been here pretty much
                                 all my
                                 life.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
                             <p>I did relocate to South Florida for 18 months for my first job out of college. But since
                                 I
                                 missed my
                                 friends and family terribly, I was allowed to move back home. I still work for that
                                 very same
                                 company.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
                             <p>I like to travel and experience what it&rsquo;s like to live in other parts of the
                                 world. I
                                 still
@@ -76,13 +70,12 @@
                                 do a road
                                 trip and travel through all 48 contiguous states.</p>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer clearfix">
         <div class="container-fluid text-center">
             <span class="text-muted">&copy; Copyright 2018 Cindy Lei</span>
         </div>
